--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <meta name="author" content="gardenpaper">
 <meta name="Description" content="Gardenpaper - Luxurious Bespoke Carpets Rugs" />
+<link href="images/gp-fav-hd1-50x50-logo.png" rel="icon" type="image/x-icon" />
 <link href="css/reset.css" rel="stylesheet" type="text/css" media="screen" />
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css" />
