--- a/index.html
+++ b/index.html
@@ -5,7 +5,20 @@
 <title>Gardenpaper - Luxurious Bespoke Carpets Rugs</title>
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <meta name="author" content="gardenpaper">
-<meta name="Description" content="Gardenpaper - Luxurious Bespoke Carpets Rugs" />
+<meta name="Description" content="Gardenpaper - Luxurious Bespoke Carpets Rugs for interior design of spaces residential and commercial" />
+<meta name="language" content="english"> 
+    <meta http-equiv="content-type" content="text/html">
+    <meta name="author" content=”Gaurav”>
+    <meta name="designer" content=”Gaurav”>
+    <meta name="publisher" content=”Gaurav”>
+	<meta name="google-site-verification" content="jpu4guCXISC-FyjHRSXKugXCL0-SfyaWkj_xpgAZXEw" />
+<meta name="keywords" content="Luxurious,bespoke,rugs,carpets,kaleen,galeecha,customization,mumbai,interior,residential,commercial">
+    <meta name=”robots” content=”index,follow”>
+    <meta name="revisit-after" content="7 days">
+    <meta name="distribution" content="web">
+    <meta http-equiv="refresh" content="30">
+    <meta name="robots" content="noodp">	
+	
 <link href="images/gp-fav-hd1-50x50-logo.png" rel="icon" type="image/x-icon" />
 <link href="css/reset.css" rel="stylesheet" type="text/css" media="screen" />
 <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -27,7 +40,7 @@
 </div>
 <!-- start wrapper -->
 <div class="wrapper">
-  <h1 id="logo"><a href="index.html">Gardenpaper
+  <h1 id="logo"><a href="index.html">Gardenpaper Luxurious Rugs
     <div class="circle-anim"></div>
     </a></h1>
   <div id="menu-button">
@@ -86,7 +99,7 @@
     <div id="fixed-barrier"></div>
     <div class="padding-0 clearfix" data-ref="mixitup-container">
       <div class="mix item green clearfix col-md-4 col-sm-6 home portfolio lifestyle" data-ref="mixitup-target"> <a href="ajax/project1.html" title="">
-        <figure class="images"> <img src="images/Handknotted11.jpg" alt="<span>Handknotted</span>Bespoke in Wool" class="slip" /> </figure>
+        <figure class="images"> <img src="images/Handknotted11.jpg" alt="<span>Handknotted</span>Bespoke Luxury" class="slip" /> </figure>
         </a> </div>
       <div class="mix item red clearfix col-md-4 col-sm-6 home portfolio travel" data-ref="mixitup-target"> <a href="ajax/project2.html" title="">
         <figure class="images"> <img src="images/Handtufted03.jpg" alt="<span>Handtufted</span>Bespoke Design <i>of</i> Gardenpaper" class="slip" /> </figure>
@@ -98,7 +111,7 @@
         <figure class="images"> <img src="images/Handtufted04.jpg" alt="<span>Handknotted </span>Modern Design" class="slip" /> </figure>
         </a> </div>
       <div class="mix item red clearfix col-md-4 col-sm-6 home portfolio work" data-ref="mixitup-target"> <a href="ajax/project5.html" title="">
-        <figure class="images"> <img src="images/Handtufted05.jpg" alt="<span>Rugs</span>It's a Silk Game" class="slip" /> </figure>
+        <figure class="images"> <img src="images/Handtufted05.jpg" alt="<span>Rugs</span>It's a Silk space" class="slip" /> </figure>
         </a> </div>
       <div class="mix item green clearfix col-md-4 col-sm-6 home portfolio lifestyle" data-ref="mixitup-target"> <a href="ajax/project6.html" title="">
         <figure class="images"> <img src="images/Handtufted06.jpg" alt="<span>Handknotted</span>Luxury <i>at</i> Floors Decor" class="slip" /> </figure>
@@ -107,7 +120,7 @@
         <figure class="images"> <img src="images/Handtufted07.jpg" alt="<span>Handtufted</span>Designer Style <i>of</i> Rugs" class="slip" /> </figure>
         </a> </div>
       <div class="mix item red clearfix col-md-4 col-sm-6 home portfolio lifestyle" data-ref="mixitup-target"> <a href="ajax/project8.html" title="">
-        <figure class="images"> <img src="images/Handkotted08.jpg" alt="<span>Handknotted</span>Getting Designed <i>in</i> Silk" class="slip" /> </figure>
+        <figure class="images"> <img src="images/Handkotted08.jpg" alt="<span>Handknotted</span>Interior Designed <i>in</i> Silk" class="slip" /> </figure>
         </a> </div>
       <div class="mix item green clearfix col-md-4 col-sm-6 home portfolio work" data-ref="mixitup-target"> <a href="ajax/project9.html" title="">
         <figure class="images"> <img src="images/Handknotted111.jpg" alt="<span>Rugs</span>Unique Designs" class="slip" /> </figure>
