--- a/ajax/project2.html
+++ b/ajax/project2.html
@@ -10,5 +10,5 @@
   </div>
 </div>
 <div id="project-slider">
-  <figure class="images"> <img src="images/food01-lg.jpg" alt="" /> </figure>
+  <figure class="images"> <img src="images/project2.avif" alt="" /> </figure>
   <a class="ajax-prev" href="ajax/project1.html"></a> <a class="ajax-next" href="ajax/project3.html"></a> </div>
