--- a/ajax/project8.html
+++ b/ajax/project8.html
@@ -7,5 +7,5 @@
   </div>
 </div>
 <div id="project-slider">
-  <figure class="images"> <img src="images/project8.jpg" alt="" /> </figure>
+  <figure class="images"> <img src="images/project8.avif" alt="" /> </figure>
   <a class="ajax-prev" href="ajax/project7.html"></a> <a class="ajax-next" href="ajax/project9.html"></a> </div>
