--- a/ajax/project9.html
+++ b/ajax/project9.html
@@ -7,5 +7,5 @@
   </div>
 </div>
 <div id="project-slider">
-  <figure class="images"> <img src="images/project9.jpg" alt="" /> </figure>
+  <figure class="images"> <img src="images/project9.avif" alt="" /> </figure>
   <a class="ajax-prev" href="ajax/project8.html"></a> <a class="ajax-next" href="ajax/project10.html"></a> </div>
