--- a/index.html
+++ b/index.html
@@ -99,40 +99,40 @@
     <div id="fixed-barrier"></div>
     <div class="padding-0 clearfix" data-ref="mixitup-container">
       <div class="mix item green clearfix col-md-4 col-sm-6 home portfolio lifestyle" data-ref="mixitup-target"> <a href="ajax/project1.html" title="">
-        <figure class="images"> <img src="images/Handknotted11.jpg" alt="<span>Handknotted</span>Bespoke Luxury" class="slip" /> </figure>
+        <figure class="images"> <img src="images/Handknotted11.avif" alt="<span>Handknotted</span>Bespoke Luxury" class="slip" /> </figure>
         </a> </div>
       <div class="mix item red clearfix col-md-4 col-sm-6 home portfolio travel" data-ref="mixitup-target"> <a href="ajax/project2.html" title="">
-        <figure class="images"> <img src="images/Handtufted03.jpg" alt="<span>Handtufted</span>Bespoke Design <i>of</i> Gardenpaper" class="slip" /> </figure>
+        <figure class="images"> <img src="images/Handtufted03.avif" alt="<span>Handtufted</span>Bespoke Design <i>of</i> Gardenpaper" class="slip" /> </figure>
         </a> </div>
       <div class="mix item green clearfix col-md-4 col-sm-6 home portfolio lifestyle" data-ref="mixitup-target"> <a href="ajax/project3.html" title="">
-        <figure class="images"> <img src="images/Handknotted15.jpg" alt="<span>Handknotted</span>Bespoke Home" class="slip" /> </figure>
+        <figure class="images"> <img src="images/Handknotted15.avif" alt="<span>Handknotted</span>Bespoke Home" class="slip" /> </figure>
         </a> </div>
       <div class="mix item green clearfix col-md-4 col-sm-6 home portfolio lifestyle" data-ref="mixitup-target"> <a href="ajax/project4.html" title="">
-        <figure class="images"> <img src="images/Handtufted04.jpg" alt="<span>Handknotted </span>Modern Design" class="slip" /> </figure>
+        <figure class="images"> <img src="images/Handtufted04.avif" alt="<span>Handknotted </span>Modern Design" class="slip" /> </figure>
         </a> </div>
       <div class="mix item red clearfix col-md-4 col-sm-6 home portfolio work" data-ref="mixitup-target"> <a href="ajax/project5.html" title="">
         <figure class="images"> <img src="images/Handtufted05.jpg" alt="<span>Rugs</span>It's a Silk space" class="slip" /> </figure>
         </a> </div>
       <div class="mix item green clearfix col-md-4 col-sm-6 home portfolio lifestyle" data-ref="mixitup-target"> <a href="ajax/project6.html" title="">
-        <figure class="images"> <img src="images/Handtufted06.jpg" alt="<span>Handknotted</span>Luxury <i>at</i> Floors Decor" class="slip" /> </figure>
+        <figure class="images"> <img src="images/Handtufted06.avif" alt="<span>Handknotted</span>Luxury <i>at</i> Floors Decor" class="slip" /> </figure>
         </a> </div>
       <div class="mix item red clearfix col-md-4 col-sm-6 home portfolio travel" data-ref="mixitup-target"> <a href="ajax/project7.html" title="">
-        <figure class="images"> <img src="images/Handtufted07.jpg" alt="<span>Handtufted</span>Designer Style <i>of</i> Rugs" class="slip" /> </figure>
+        <figure class="images"> <img src="images/Handtufted07.avif" alt="<span>Handtufted</span>Designer Style <i>of</i> Rugs" class="slip" /> </figure>
         </a> </div>
       <div class="mix item red clearfix col-md-4 col-sm-6 home portfolio lifestyle" data-ref="mixitup-target"> <a href="ajax/project8.html" title="">
-        <figure class="images"> <img src="images/Handkotted08.jpg" alt="<span>Handknotted</span>Interior Designed <i>in</i> Silk" class="slip" /> </figure>
+        <figure class="images"> <img src="images/Handkotted08.avif" alt="<span>Handknotted</span>Interior Designed <i>in</i> Silk" class="slip" /> </figure>
         </a> </div>
       <div class="mix item green clearfix col-md-4 col-sm-6 home portfolio work" data-ref="mixitup-target"> <a href="ajax/project9.html" title="">
-        <figure class="images"> <img src="images/Handknotted111.jpg" alt="<span>Rugs</span>Unique Designs" class="slip" /> </figure>
+        <figure class="images"> <img src="images/Handknotted111.avif" alt="<span>Rugs</span>Unique Designs" class="slip" /> </figure>
         </a> </div>
       <div class="mix item red clearfix col-md-4 col-sm-6 home portfolio travel" data-ref="mixitup-target"> <a href="ajax/project10.html" title="">
-        <figure class="images"> <img src="images/Handknotted12.jpg" alt="<span>Handtufted</span>All <i>to</i> Luxury" class="slip" /> </figure>
+        <figure class="images"> <img src="images/Handknotted12.avif" alt="<span>Handtufted</span>All <i>to</i> Luxury" class="slip" /> </figure>
         </a> </div>
       <div class="mix item red clearfix col-md-4 col-sm-6 home portfolio travel" data-ref="mixitup-target"> <a href="ajax/project11.html" title="">
-        <figure class="images"> <img src="images/Handtufted01.jpg" alt="<span>DESIGN </span>EMOTION" class="slip" /> </figure>
+        <figure class="images"> <img src="images/Handtufted01.avif" alt="<span>DESIGN </span>EMOTION" class="slip" /> </figure>
         </a> </div>
       <div class="mix item green clearfix col-md-4 col-sm-6 home portfolio work" data-ref="mixitup-target"> <a href="ajax/project12.html" title="">
-        <figure class="images"> <img src="images/Handknotted13.jpg" alt="<span>Rugs</span> Project 'You + Design'" class="slip" /> </figure>
+        <figure class="images"> <img src="images/Handknotted13.avif" alt="<span>Rugs</span> Project 'You + Design'" class="slip" /> </figure>
         </a> </div>
     </div>
     <!-- end mixitup container --> 
