--- a/ajax/project1.html
+++ b/ajax/project1.html
@@ -7,5 +7,5 @@
   </div>
 </div>
 <div id="project-slider">
-  <figure class="images"> <img src="images/project-1.jpg" alt="Handknotted" /> </figure>
+  <figure class="images"> <img src="images/project-1.avif" alt="Handknotted" /> </figure>
   <a class="ajax-next" href="ajax/project2.html"></a> </div>
