--- a/ajax/project12.html
+++ b/ajax/project12.html
@@ -14,5 +14,5 @@ are familiar yet altogether new. </p>
   </div>
 </div>
 <div id="project-slider">
-  <figure class="images"> <img src="images/project12.jpg" alt="" /> </figure>
+  <figure class="images"> <img src="images/project12.avif" alt="" /> </figure>
   <a class="ajax-prev" href="ajax/project11.html"></a> </div>
