--- a/ajax/project3.html
+++ b/ajax/project3.html
@@ -7,5 +7,5 @@
   </div>
 </div>
 <div id="project-slider">
-  <figure class="images"> <img src="images/project3.jpg" alt="" /> </figure>
+  <figure class="images"> <img src="images/project3.avif" alt="" /> </figure>
   <a class="ajax-prev" href="ajax/project2.html"></a> <a class="ajax-next" href="ajax/project4.html"></a> </div>
