--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 <link href="css/styles.css" rel="stylesheet" type="text/css" media="screen" />
 <link href="css/responsive.css" rel="stylesheet" type="text/css" media="screen" />
 <link href="css/custom.css" rel="stylesheet" type="text/css" media="screen" />
-<link href="https://fonts.googleapis.com/css?family=Rufina:400,600,700,800" rel="stylesheet" type="text/css" />
-<link href="https://fonts.googleapis.com/css?family=Lato:400,600,400italic" rel="stylesheet" />
+<link href="https://fonts.googleapis.com/css?family=Rufina:400,600,700,800&display=swap" rel="stylesheet" type="text/css" />
+<link href="https://fonts.googleapis.com/css?family=Lato:400,600,400italic&display=swap" rel="stylesheet" />
 <script src="js/modernizr.js" type="text/javascript"></script>
 </head>
 <body class="sliphover-active">
@@ -142,7 +142,7 @@
 </div>
 <!-- end wrapper --> 
 
-<script src="js/jquery-1.12.4.min.js" type="text/javascript"></script> 
+<!-- <script src="js/jquery-1.12.4.min.js" type="text/javascript"></script> -->
 <script src="js/jquery-easing-1.3.js" type="text/javascript"></script> 
 <script src="js/jquery.touchSwipe.min.js" type="text/javascript"></script> 
 <script src="js/bootstrap.min.js" type="text/javascript"></script> 
