--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 <meta charset="utf-8">
 <title>Gardenpaper - Luxurious Bespoke Carpets Rugs</title>
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+<!-- <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"> -->
+<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=3.0">
 <meta name="author" content="gardenpaper">
 <meta name="Description" content="Gardenpaper - Luxurious Bespoke Carpets Rugs for interior design of spaces residential and commercial" />
 <meta name="language" content="english"> 
