--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <figure class="images"> <img src="images/Handtufted04.avif" alt="<span>Handknotted </span>Modern Design" class="slip" /> </figure>
         </a> </div>
       <div class="mix item red clearfix col-md-4 col-sm-6 home portfolio work" data-ref="mixitup-target"> <a href="ajax/project5.html" title="">
-        <figure class="images"> <img src="images/Handtufted05.jpg" alt="<span>Rugs</span>It's a Silk space" class="slip" /> </figure>
+        <figure class="images"> <img src="images/Handtufted05.avif" alt="<span>Rugs</span>It's a Silk space" class="slip" /> </figure>
         </a> </div>
       <div class="mix item green clearfix col-md-4 col-sm-6 home portfolio lifestyle" data-ref="mixitup-target"> <a href="ajax/project6.html" title="">
         <figure class="images"> <img src="images/Handtufted06.avif" alt="<span>Handknotted</span>Luxury <i>at</i> Floors Decor" class="slip" /> </figure>
