--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <meta name="robots" content="noodp">	
 	
 <link href="images/gp-fav-hd1-50x50-logo.png" rel="icon" type="image/x-icon" />
+<link href="/apple-touch-icon.png" rel="apple-touch-icon" >
+<link href="/favicon.ico" rel="icon" type="image/x-icon" >
 <link href="css/reset.css" rel="stylesheet" type="text/css" media="screen" />
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css" />
