--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 <link href="images/gp-fav-hd1-50x50-logo.png" rel="icon" type="image/x-icon" />
 <link href="/apple-touch-icon.png" rel="apple-touch-icon" >
 <link href="/favicon.ico" rel="icon" type="image/x-icon" >
+<link href="/gp-fav.svg" rel="mask-icon" sizes="any" color="#cf2329" type="image/svg+xml" >
 <link href="css/reset.css" rel="stylesheet" type="text/css" media="screen" />
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css" />
