meta tags social

--- a/index.html
+++ b/index.html
@@ -24,6 +24,16 @@
 <link href="/apple-touch-icon.png" rel="apple-touch-icon" >
 <link href="/favicon.ico" rel="icon" type="image/x-icon" >
 <link href="/gp-fav.svg" rel="mask-icon" sizes="any" color="#cf2329" type="image/svg+xml" >
+
+<meta property="og:title" content="Luxurious Rugs" />
+<meta property="og:type" content="photo.product" />
+<meta property="og:url" content="https://gardenpaper.in" />
+<meta property="og:image" content="https://gardenpaper.in/images/facebook-twitter.jpg" />
+<meta name="twitter:title" content="Luxurious Rugs">
+<meta name="twitter:description" content=" Offering tour packages for individuals or groups.">
+<meta name="twitter:image" content=" https://gardenpaper.in/images/facebook-twitter.jpg">
+<meta name="twitter:card" content="summary_large_image">
+
 <link href="css/reset.css" rel="stylesheet" type="text/css" media="screen" />
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css" />
