--- a/index.html
+++ b/index.html
@@ -27,12 +27,14 @@
 
 <meta property="og:title" content="Luxurious Rugs" />
 <meta property="og:type" content="photo.product" />
-<meta property="og:url" content="https://gardenpaper.in" />
+<meta property="og:url" content="https://gardenpaper.in/index.html" />
 <meta property="og:image" content="https://gardenpaper.in/images/facebook-twitter.jpg" />
+
+<meta name="twitter:card" content="summary_large_image"> </meta>
 <meta name="twitter:title" content="Luxurious Rugs">
 <meta name="twitter:description" content=" Offering tour packages for individuals or groups.">
 <meta name="twitter:image" content=" https://gardenpaper.in/images/facebook-twitter.jpg">
-<meta name="twitter:card" content="summary_large_image">
+
 
 <link href="css/reset.css" rel="stylesheet" type="text/css" media="screen" />
 <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -119,34 +121,34 @@
         <figure class="images"> <img src="images/Handtufted03.avif"   alt="<span>Handtufted</span>Bespoke Design <i>of</i> Gardenpaper" class="slip" /> </figure>
         </a> </div>
       <div class="mix item green clearfix col-md-4 col-sm-6 home portfolio lifestyle" data-ref="mixitup-target"> <a href="ajax/project3.html" title="">
-        <figure class="images"> <img src="images/Handknotted15.avif"  alt="<span>Handknotted</span>Bespoke Home" class="slip" /> </figure>
+        <figure class="images"> <img src="images/Handknotted15.avif" height="300" width="300" alt="<span>Handknotted</span>Bespoke Home" class="slip" /> </figure>
         </a> </div>
       <div class="mix item green clearfix col-md-4 col-sm-6 home portfolio lifestyle" data-ref="mixitup-target"> <a href="ajax/project4.html" title="">
-        <figure class="images"> <img src="images/Handtufted04.avif" alt="<span>Handknotted </span>Modern Design" class="slip" /> </figure>
+        <figure class="images"> <img src="images/Handtufted04.avif" height="300" width="300"alt="<span>Handknotted </span>Modern Design" class="slip" /> </figure>
         </a> </div>
       <div class="mix item red clearfix col-md-4 col-sm-6 home portfolio work" data-ref="mixitup-target"> <a href="ajax/project5.html" title="">
-        <figure class="images"> <img src="images/Handtufted05.avif"  alt="<span>Rugs</span>It's a Silk space" class="slip" /> </figure>
+        <figure class="images"> <img src="images/Handtufted05.avif"  height="300" width="300"alt="<span>Rugs</span>It's a Silk space" class="slip" /> </figure>
         </a> </div>
       <div class="mix item green clearfix col-md-4 col-sm-6 home portfolio lifestyle" data-ref="mixitup-target"> <a href="ajax/project6.html" title="">
-        <figure class="images"> <img src="images/Handtufted06.avif"  alt="<span>Handknotted</span>Luxury <i>at</i> Floors Decor" class="slip" /> </figure>
+        <figure class="images"> <img src="images/Handtufted06.avif"  height="300" width="300"alt="<span>Handknotted</span>Luxury <i>at</i> Floors Decor" class="slip" /> </figure>
         </a> </div>
       <div class="mix item red clearfix col-md-4 col-sm-6 home portfolio travel" data-ref="mixitup-target"> <a href="ajax/project7.html" title="">
-        <figure class="images"> <img src="images/Handtufted07.avif"  alt="<span>Handtufted</span>Designer Style <i>of</i> Rugs" class="slip" /> </figure>
+        <figure class="images"> <img src="images/Handtufted07.avif" height="300" width="300" alt="<span>Handtufted</span>Designer Style <i>of</i> Rugs" class="slip" /> </figure>
         </a> </div>
       <div class="mix item red clearfix col-md-4 col-sm-6 home portfolio lifestyle" data-ref="mixitup-target"> <a href="ajax/project8.html" title="">
-        <figure class="images"> <img src="images/Handkotted08.avif" alt="<span>Handknotted</span>Interior Designed <i>in</i> Silk" class="slip" /> </figure>
+        <figure class="images"> <img src="images/Handkotted08.avif" height="300" width="300" alt="<span>Handknotted</span>Interior Designed <i>in</i> Silk" class="slip" /> </figure>
         </a> </div>
       <div class="mix item green clearfix col-md-4 col-sm-6 home portfolio work" data-ref="mixitup-target"> <a href="ajax/project9.html" title="">
-        <figure class="images"> <img src="images/Handknotted111.avif"  alt="<span>Rugs</span>Unique Designs" class="slip" /> </figure>
+        <figure class="images"> <img src="images/Handknotted111.avif" height="300" width="300" alt="<span>Rugs</span>Unique Designs" class="slip" /> </figure>
         </a> </div>
       <div class="mix item red clearfix col-md-4 col-sm-6 home portfolio travel" data-ref="mixitup-target"> <a href="ajax/project10.html" title="">
-        <figure class="images"> <img src="images/Handknotted12.avif" alt="<span>Handtufted</span>All <i>to</i> Luxury" class="slip" /> </figure>
+        <figure class="images"> <img src="images/Handknotted12.avif" height="300" width="300"alt="<span>Handtufted</span>All <i>to</i> Luxury" class="slip" /> </figure>
         </a> </div>
       <div class="mix item red clearfix col-md-4 col-sm-6 home portfolio travel" data-ref="mixitup-target"> <a href="ajax/project11.html" title="">
-        <figure class="images"> <img src="images/Handtufted01.avif"  alt="<span>DESIGN </span>EMOTION" class="slip" /> </figure>
+        <figure class="images"> <img src="images/Handtufted01.avif" height="300" width="300" alt="<span>DESIGN </span>EMOTION" class="slip" /> </figure>
         </a> </div>
       <div class="mix item green clearfix col-md-4 col-sm-6 home portfolio work" data-ref="mixitup-target"> <a href="ajax/project12.html" title="">
-        <figure class="images"> <img src="images/Handknotted13.avif"  alt="<span>Rugs</span> Project 'You + Design'" class="slip" /> </figure>
+        <figure class="images"> <img src="images/Handknotted13.avif" height="300" width="300" alt="<span>Rugs</span> Project 'You + Design'" class="slip" /> </figure>
         </a> </div>
     </div>
     <!-- end mixitup container --> 
