--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <meta name="distribution" content="web">
     
     <meta name="robots" content="noodp">	
+<meta http-equiv="Cache-control" content="public">
 	
 <link href="images/gp-fav-hd1-50x50-logo.png" rel="icon" type="image/x-icon" />
 <link href="/apple-touch-icon.png" rel="apple-touch-icon" >
@@ -219,40 +220,40 @@
     <div id="fixed-barrier"></div>
     <div class="padding-0 clearfix" data-ref="mixitup-container">
       <div class="mix item green clearfix col-md-4 col-sm-6 home portfolio lifestyle" data-ref="mixitup-target"> <a href="ajax/project1.html" title="">
-        <figure class="images"> <img src="images/Handknotted11.avif" alt="<span>Handknotted</span>Bespoke Luxury" class="slip" /> </figure>
+        <figure class="images"> <img src="images/Handknotted11.avif" height="341" width="277" alt="<span>Handknotted</span>Bespoke Luxury" class="slip" /> </figure>
         </a> </div>
       <div class="mix item red clearfix col-md-4 col-sm-6 home portfolio travel" data-ref="mixitup-target"> <a href="ajax/project2.html" title="">
-        <figure class="images"> <img src="images/Handtufted03.avif"   alt="<span>Handtufted</span>Bespoke Design <i>of</i> Gardenpaper" class="slip" /> </figure>
+        <figure class="images"> <img src="images/Handtufted03.avif" height="341" width="277"  alt="<span>Handtufted</span>Bespoke Design <i>of</i> Gardenpaper" class="slip" /> </figure>
         </a> </div>
       <div class="mix item green clearfix col-md-4 col-sm-6 home portfolio lifestyle" data-ref="mixitup-target"> <a href="ajax/project3.html" title="">
-        <figure class="images"> <img src="images/Handknotted15.avif" height="300" width="300" alt="<span>Handknotted</span>Bespoke Home" class="slip" /> </figure>
+        <figure class="images"> <img src="images/Handknotted15.avif" height="341" width="277" alt="<span>Handknotted</span>Bespoke Home" class="slip" /> </figure>
         </a> </div>
       <div class="mix item green clearfix col-md-4 col-sm-6 home portfolio lifestyle" data-ref="mixitup-target"> <a href="ajax/project4.html" title="">
-        <figure class="images"> <img src="images/Handtufted04.avif" height="300" width="300"alt="<span>Handknotted </span>Modern Design" class="slip" /> </figure>
+        <figure class="images"> <img src="images/Handtufted04.avif" height="341" width="277" alt="<span>Handknotted </span>Modern Design" class="slip" /> </figure>
         </a> </div>
       <div class="mix item red clearfix col-md-4 col-sm-6 home portfolio work" data-ref="mixitup-target"> <a href="ajax/project5.html" title="">
-        <figure class="images"> <img src="images/Handtufted05.avif"  height="300" width="300"alt="<span>Rugs</span>It's a Silk space" class="slip" /> </figure>
+        <figure class="images"> <img src="images/Handtufted05.avif" height="341" width="277" alt="<span>Rugs</span>It's a Silk space" class="slip" /> </figure>
         </a> </div>
       <div class="mix item green clearfix col-md-4 col-sm-6 home portfolio lifestyle" data-ref="mixitup-target"> <a href="ajax/project6.html" title="">
-        <figure class="images"> <img src="images/Handtufted06.avif"  height="300" width="300"alt="<span>Handknotted</span>Luxury <i>at</i> Floors Decor" class="slip" /> </figure>
+        <figure class="images"> <img src="images/Handtufted06.avif" height="341" width="277" alt="<span>Handknotted</span>Luxury <i>at</i> Floors Decor" class="slip" /> </figure>
         </a> </div>
       <div class="mix item red clearfix col-md-4 col-sm-6 home portfolio travel" data-ref="mixitup-target"> <a href="ajax/project7.html" title="">
-        <figure class="images"> <img src="images/Handtufted07.avif" height="300" width="300" alt="<span>Handtufted</span>Designer Style <i>of</i> Rugs" class="slip" /> </figure>
+        <figure class="images"> <img src="images/Handtufted07.avif" height="341" width="277" alt="<span>Handtufted</span>Designer Style <i>of</i> Rugs" class="slip" /> </figure>
         </a> </div>
       <div class="mix item red clearfix col-md-4 col-sm-6 home portfolio lifestyle" data-ref="mixitup-target"> <a href="ajax/project8.html" title="">
-        <figure class="images"> <img src="images/Handkotted08.avif" height="300" width="300" alt="<span>Handknotted</span>Interior Designed <i>in</i> Silk" class="slip" /> </figure>
+        <figure class="images"> <img src="images/Handkotted08.avif" height="341" width="277" alt="<span>Handknotted</span>Interior Designed <i>in</i> Silk" class="slip" /> </figure>
         </a> </div>
       <div class="mix item green clearfix col-md-4 col-sm-6 home portfolio work" data-ref="mixitup-target"> <a href="ajax/project9.html" title="">
-        <figure class="images"> <img src="images/Handknotted111.avif" height="300" width="300" alt="<span>Rugs</span>Unique Designs" class="slip" /> </figure>
+        <figure class="images"> <img src="images/Handknotted111.avif" height="341" width="277" alt="<span>Rugs</span>Unique Designs" class="slip" /> </figure>
         </a> </div>
       <div class="mix item red clearfix col-md-4 col-sm-6 home portfolio travel" data-ref="mixitup-target"> <a href="ajax/project10.html" title="">
-        <figure class="images"> <img src="images/Handknotted12.avif" height="300" width="300"alt="<span>Handtufted</span>All <i>to</i> Luxury" class="slip" /> </figure>
+        <figure class="images"> <img src="images/Handknotted12.avif" height="341" width="277" alt="<span>Handtufted</span>All <i>to</i> Luxury" class="slip" /> </figure>
         </a> </div>
       <div class="mix item red clearfix col-md-4 col-sm-6 home portfolio travel" data-ref="mixitup-target"> <a href="ajax/project11.html" title="">
-        <figure class="images"> <img src="images/Handtufted01.avif" height="300" width="300" alt="<span>DESIGN </span>EMOTION" class="slip" /> </figure>
+        <figure class="images"> <img src="images/Handtufted01.avif" height="341" width="277" alt="<span>DESIGN </span>EMOTION" class="slip" /> </figure>
         </a> </div>
       <div class="mix item green clearfix col-md-4 col-sm-6 home portfolio work" data-ref="mixitup-target"> <a href="ajax/project12.html" title="">
-        <figure class="images"> <img src="images/Handknotted13.avif" height="300" width="300" alt="<span>Rugs</span> Project 'You + Design'" class="slip" /> </figure>
+        <figure class="images"> <img src="images/Handknotted13.avif" height="341" width="277" alt="<span>Rugs</span> Project 'You + Design'" class="slip" /> </figure>
         </a> </div>
     </div>
     <!-- end mixitup container --> 
