--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta name="distribution" content="web">
     
     <meta name="robots" content="noodp">	
-<meta http-equiv="Cache-control" content="public">
+<META HTTP-EQUIV="Cache-Control" CONTENT="max-age=604800">
 	
 <link href="images/gp-fav-hd1-50x50-logo.png" rel="icon" type="image/x-icon" />
 <link href="/apple-touch-icon.png" rel="apple-touch-icon" >
