--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta name="distribution" content="web">
     
     <meta name="robots" content="noodp">	
-<META HTTP-EQUIV="Cache-Control" CONTENT="max-age=604800">
+<META HTTP-EQUIV="Cache-Control" CONTENT="max-age=864000 , private, must-revalidate">
 	
 
 
@@ -31,8 +31,8 @@
 <link href="css/styles.css" rel="stylesheet" type="text/css" media="screen" />
 <link href="css/responsive.css" rel="stylesheet" type="text/css" media="screen" />
 <link href="css/custom.css" rel="stylesheet" type="text/css" media="screen" />
-<link href="https://fonts.googleapis.com/css?family=Rufina:400,600,700,800&display=swap" rel="stylesheet" type="text/css" />
-<link href="https://fonts.googleapis.com/css?family=Lato:400,600,400italic&display=swap" rel="stylesheet" />
+<link defer href="https://fonts.googleapis.com/css?family=Rufina:400,600,700,800&display=swap" rel="stylesheet" type="text/css" />
+<link defer href="https://fonts.googleapis.com/css?family=Lato:400,600,400italic&display=swap" rel="stylesheet" />
 
 
 
