--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 </div>
 <!-- end wrapper --> 
 
-<script defer  src="js/jquery-1.12.4.min.js" type="text/javascript"></script>
+<script src="js/jquery-1.12.4.min.js" type="text/javascript"></script>
 <script src="js/jquery-easing-1.3.js" type="text/javascript"></script> 
 <script src="js/jquery.touchSwipe.min.js" type="text/javascript"></script> 
 <script src="js/bootstrap.min.js" type="text/javascript"></script> 
