--- a/post.html
+++ b/post.html
@@ -38,7 +38,7 @@
       <ul class="option-set clearfix" data-option-key="filter">
         <li> <a href="index.html">Portfolio</a></li>
         <li> <a href="about.html">About</a> </li>
-        <li> <a href="blog.html">Blog</a> </li>
+        <li> <a href="experience.html">Experience</a> </li>
         
         <li> <a href="contact.html">Contact</a> </li>
       </ul>
@@ -144,7 +144,7 @@ We'll help you select the right weave and create what works best for your space.
         <div class="comment last clearfix">
           <div class="commenter-avatar"> <img alt="" src="images/about02.jpg" /> </div>
           <div class="comment-content">
-            <p><span class="small">Nov 10, 2017 <span class="padding">&#183;</span> <a href="#" title=""><i class="fa fa-comments"></i> Reply</a></span></p>
+            <p><span class="small">Nov 10, 2021 <span class="padding">&#183;</span> <a href="#" title=""><i class="fa fa-comments"></i> Reply</a></span></p>
             <h5>Shelly</h5>
             <p>This bamboo silk and wool in designer rugs was great.</p>
           </div>
