--- a/slideshow.html
+++ b/slideshow.html
@@ -57,7 +57,7 @@
 				<ul class="option-set clearfix" data-option-key="filter">
 					<li><a href="index.html">Portfolio</a></li>
 					<li><a href="about.html">About</a></li>
-					<li><a href="blog.html">Blog</a></li>
+					<li><a href="experience.html">Experience</a></li>
 					<li><a href="contact.html">Contact</a></li>
 				</ul>
 			</nav>
@@ -109,10 +109,10 @@
 					<div class="flexslider">
 						<ul class="slides">
 							<li>
-								<img src="images/project8.jpg" alt="" />
+								<img src="images/project8.avif" alt="" />
 							</li>
 							<li>
-								<img src="images/project7.jpg" alt="" />
+								<img src="images/project13.avif" alt="" />
 							</li>
 						</ul>
 					</div>
