--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
 				<ul class="option-set clearfix" data-option-key="filter">
 					<li><a href="index.html">Portfolio</a></li>
 					<li><a href="about.html" class="active">About</a></li>
-					<li><a href="blog.html">Blog</a></li>
+					<li><a href="experience.html">Experience</a></li>
 					<li><a href="contact.html">Contact</a></li>
 				</ul>
 			</nav>
