--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
       <ul class="option-set clearfix" data-option-key="filter">
         <li> <a href="index.html">Portfolio</a></li>
         <li> <a href="about.html">About</a> </li>
-        <li> <a href="blog.html">Blog</a> </li>
+        <li><a href="experience.html">Experience</a></li>
         
         <li> <a href="contact.html" class="active">Contact</a> </li>
       </ul>
