--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           </ul>
         </li>
         <li> <a href="about.html">About</a> </li>
-        <li> <a href="blog.html">Blog</a> </li>
+        <li><a href="experience.html">Experience</a></li>
         
         <li> <a href="contact.html">Contact</a> </li>
       </ul>
