--- a/contact.html
+++ b/contact.html
@@ -122,6 +122,7 @@
         <p><a href="mailto:info@gardenpaper.in" title="">info@gardenpaper.in</a> <br />
           </p>
       </div>
+	  <div class="col-lg-12 centered"><a href="https://www.facebook.com/share.php?u=gardenpaper.in" target="_blank" title="facebook" class="button"><i class="fa fa-facebook"></i> Share on Facebook</a> <a href="https://twitter.com/intent/tweet?text=amazing &url=https://gardenpaper.in&hashtags=rugs,amazing,carpets,lifestyle" target="_blank" title="Twitter" class="button"><i class="fa fa-twitter"></i> Post on Twitter</a></div>
     </div>
     <footer>
       <div class="barrier"></div>
