--- a/about.html
+++ b/about.html
@@ -187,6 +187,8 @@
 			</div>
 			
 			<div class="barrier"></div>
+			<div class="col-lg-12 centered"><a href="https://www.facebook.com/share.php?u=gardenpaper.in" target="_blank" title="facebook" class="button"><i class="fa fa-facebook"></i> Share on Facebook</a> <a href="https://twitter.com/intent/tweet?text=amazing &url=https://gardenpaper.in&hashtags=rugs,amazing,carpets,lifestyle" target="_blank" title="Twitter" class="button"><i class="fa fa-twitter"></i> Post on Twitter</a></div>
+			<div class="barrier"></div>
 			
 			<div class="container clearfix no-header">
 				<div class="col-lg-12 centered">
