--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
       "@type": "Product",
       "name": "Handknotted C",
       "image": "https://gardenpaper.in/images/Handknotted13.jpg",
-      "description": "Luxurious Bespoke Handknotted Rugs.",
+      "description": "Luxurious Bespoke Handknotted Rugs",
       "sku": "ABC123",
       "brand": {
         "@type": "Brand",
