--- a/slideshow.html
+++ b/slideshow.html
@@ -132,7 +132,7 @@
 						materials and qualities to match
 						a plethora of styles.</p>
 					
-					<p>The collections reinterprets forms and shapes found in the organic world, the camouflage of nature. It encompasses themes and patterns of creation and birth, curves of life, forms in nature, geometry and abstraction of astronomical shapes, and a utopian vision. Instead of replicating the regular structure or shapes, the design ambiguously suggests forms that we find around us. The collection is comprised of hand-tufted and hand-knotted carpets that evoke certain modernism and an artistic expression of Hands Carpet's creative world. Stirred by nature's manifestations, yet futuristic in its appeal.</p>
+					<p>The collections reinterprets forms and shapes found in the organic world, the camouflage of nature. It encompasses themes and patterns of creation and birth, curves of life, forms in nature, geometry and abstraction of astronomical shapes, and a utopian vision. Instead of replicating the regular structure or shapes, the design ambiguously suggests forms that we find around us. The collection is comprised of hand-tufted and hand-knotted carpets that evoke certain modernism and an artistic expression of Gardenpaper Carpet's creative world. Stirred by nature's manifestations, yet futuristic in its appeal.</p>
 				</div>
 				
 				<div class="col-md-4 col-sm-6 extra-padding-left">
