--- a/experience.html
+++ b/experience.html
@@ -82,7 +82,7 @@
         <div class="teaser-content">
           <p class="small">Handknotted</p>
           <h3 class="header">Hand knotted Rugs</h3>
-          <p><span class="small">By Gaurav <span class="padding">&#183;</span> Jan 12, 2022</span></p>
+          <p><span class="small">By Gaurav <span class="padding">&#183;</span> Aug 12, 2023</span></p>
   		  <p>It's Style to you. Unless, of course, you need Bespoke Rugs, in which case, it really makes great sense, to design these.</p>
           <div class="teaser-bottom clearfix">
             <p class="alignright"><a href="post.html" title="">Read more</a></p>
@@ -101,10 +101,10 @@
         <div class="teaser-content">
           <p class="small">Lifestyle</p>
           <h3 class="header">Hand knotted Rugs</h3>
-          <p><span class="small">By Gaurav <span class="padding">&#183;</span> Dec 17, 2021</span></p>
+          <p><span class="small">By Gaurav <span class="padding">&#183;</span> Jun 17, 2023</span></p>
           <p>This is ultimate in luxury for dream decor for floors. While we work on the design to intricate, we can make it alive for your decor in our looms.</p>
           <div class="teaser-bottom clearfix">
-            <p class="alignright"><a href="post.html" title="">Read more</a></p>
+            <p class="alignright"><a href="post3.html" title="">Read more</a></p>
             <p class="alignleft"><i class="fa fa-comment"></i> 6 <span class="padding">&#183;</span> <i class="fa fa-heart"></i> 76</p>
           </div>
         </div>
@@ -120,10 +120,10 @@
         <div class="teaser-content">
           <p class="small">Rugs</p>
           <h3 class="header">Bespoke: 'Designer' Edition</h3>
-          <p><span class="small">By Gaurav <span class="padding">&#183;</span> Aug 04, 2021</span></p>
+          <p><span class="small">By Gaurav <span class="padding">&#183;</span> Apr 04, 2023</span></p>
           <p>It's Designed by you. We make it a highlight in your decor design, in which case, it really makes your perfect fit.</p>
           <div class="teaser-bottom clearfix">
-            <p class="alignright"><a href="post.html" title="">Read more</a></p>
+            <p class="alignright"><a href="post2.html" title="">Read more</a></p>
             <p class="alignleft"><i class="fa fa-comment"></i> 3 <span class="padding">&#183;</span> <i class="fa fa-heart"></i> 106</p>
           </div>
         </div>
@@ -134,9 +134,9 @@
       <div class="clearfix col-lg-12 centered">
         <ul class="pagination clearfix">
           <li><a href="#" title="" class="active">1</a></li>
-          <li><a href="#" title="">2</a></li>
-          <li><a href="#" title="">3</a></li>
-          <li><a href="#" title="">4</a></li>
+          <li><a href="experience2.html" title="">2</a></li>
+          <li><a href="experience3.html" title="">3</a></li>
+          <li><a href="experience4.html" title="">4</a></li>
         </ul>
       </div>
     </div>
