--- a/contact.html
+++ b/contact.html
@@ -96,7 +96,7 @@
       <div class="col-md-9 col-sm-8 col-xs-12 centered">
         <div class="boxed">
           <p class="large"> Give us a call or drop by anytime. We will get back to you with answers to all enquiries within 24 hours on business days.</p>
-          <form class="form-part" method="post" action="contact.php" name="contactform" id="contactform" autocomplete="off">
+          <!--<form class="form-part" method="post" action="contact.php" name="contactform" id="contactform" autocomplete="off">
             <input name="name" type="text" id="name" size="30" title="Name" />
             <input name="email" type="text" id="email" size="30" title="Email" />
             <textarea name="comments" cols="40" rows="3" id="comments" title="Tell us what you think!"></textarea>
@@ -104,8 +104,8 @@
               <div class="clear"></div>
               <input type="submit" class="send-btn" value="Submit" id="submit" name="Submit" />
             </div>
-          </form>
-		<iframe src="https://script.google.com/macros/s/AKfycbyLBQXKsR2J-_7vGkuchcUXK8gsi4gcufGlZ7L9gnunkYBJjmvVKAtYFXEQrlySdVkj/exec" height="500" width="100%"></iframe>
+          </form> -->
+		<iframe src="https://script.google.com/macros/s/AKfycbyDQLgUYPyZ5IhNZnj5aHg8wmSYanfEl5L5sni2INEbRaRiXkEx22TiTY3t-Qnpybvz/exec" height="500" width="100%"></iframe>
         </div>
       </div>
       <div class="col-md-3 col-sm-4 col-xs-12 extra-padding-left centered-on-xs">
