--- a/contact.html
+++ b/contact.html
@@ -107,7 +107,7 @@
           </form> -->
 		
 	
-		<iframe src="https://script.google.com/macros/s/AKfycbyDQLgUYPyZ5IhNZnj5aHg8wmSYanfEl5L5sni2INEbRaRiXkEx22TiTY3t-Qnpybvz/exec" height="100%" width="100%"></iframe>
+		<iframe src="//script.google.com/macros/s/AKfycbyDQLgUYPyZ5IhNZnj5aHg8wmSYanfEl5L5sni2INEbRaRiXkEx22TiTY3t-Qnpybvz/exec" height="400" width="100%"></iframe>
         </div>
       </div>
       <div class="col-md-3 col-sm-4 col-xs-12 extra-padding-left centered-on-xs">
